# teepeesee

./: .gitignore  AGENTS.md  CLAUDE.md  README.org  pyproject.toml
.beads/: issues.jsonl  metadata.json
In the provided `src/teepeesee/: io.py` content
src/teepeesee/: __init__.py  __main__.py  cli.py  cueteepeesee.py  display.py  displays.py  gui.py  io.py  mdisplay.py  mio.py  opers.py  qt.py  qtrio.py  trio.py
src/teepeesee/sources/: __init__.py  base.py  file.py  frame.py  random.py  tensor.py
src/teepeesee/test/: test_io.py
