[project]
name = "teepeesee"
version = "0.1.0"
description = "Add your description here"
readme = {file = "README.org", content-type = "text/org"}
authors = [
    { name = "Brett Viren", email = "brett.viren@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "numpy>=2.3.4",
    "pytest>=8.4.2",
    "pyqt6>=6.7.0",
    "pyqtgraph>=0.14.0",
]

[project.scripts]
qtpc = "teepeesee.cueteepeesee:main"


[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
